fix: improve flexibility of card grid with autofit so cards don't stretch in between

--- a/blocks/card/__like-button/card__like-button.css
+++ b/blocks/card/__like-button/card__like-button.css
@@ -1,5 +1,5 @@
 .card__like-button {
-  background: none;
+  background-color: transparent;
   border: none;
   padding: 0;
   background-image: url(../../../images/icons/heart_icon.svg);
