--- a/blocks/cards/__list/cards__list.css
+++ b/blocks/cards/__list/cards__list.css
@@ -1,20 +1,8 @@
 .cards__list {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  grid-gap: 17px 20px;
+  grid-template-columns: repeat(auto-fit, 282px);
+  justify-content: center;
+  gap: 20px 17px;
   padding: 0;
   list-style: none;
-}
-
-@media screen and (max-width: 765px) {
-  .cards__list {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-@media screen and (max-width: 500px) {
-  .cards__list {
-    grid-template-columns: 1fr;
-  }
 }
